# LampaC

./: README.md  SUBMODULE_COMMANDS.md  SUBMODULE_UPDATES.md
.github/workflows/: auto-update-submodules.yml  update-submodules.yml
Lampac/: .gitignore  Dockerfile  Makefile  NextGen.slnx  README.md  install.sh
Lampac/.github/workflows/: build.yml  format-code.yml  reusable-build.yml  reusable-docker-build.yml  reusable-upload-release-assets.yml  test-build.yml
Lampac/Core/: Core.csproj  Program.cs  README.md
Lampac/Core/Controllers/: ApiController.cs
Lampac/Core/Services/: GCMode.cs
Lampac/Core/data/: externalids.json  kinoukr.json
Lampac/Core/plugins/: invc-rch_nws.js  nws-client-es5.js  rch_nws.js
Lampac/Lampac/: Program.cs  Startup.cs
Lampac/Lampac/Engine/: NativeWebSocket.cs
Lampac/Modules/AdminPanel/: auth.html  index.html  manifest.json
Lampac/Modules/Catalog/: manifest.json
Lampac/Modules/DLNA/: Controller.cs  ModInit.cs  ModuleConf.cs  manifest.json  plugin.js
Lampac/Modules/DatabaseEditor/: DatabaseEditor.csproj  DatabaseEditorController.cs  DatabaseStore.cs  ModInit.cs  README.md  app.js  index.html  manifest.json  style.css
Lampac/Modules/GStreamer/native/: README.md  build-linux.sh  build-windows-msys2.sh  meson.build  meson_options.txt
Lampac/Modules/GStreamer/native/src/: gsthdrtonemap.c
Lampac/Online/: manifest.json
Lampac/SISI/: manifest.json
Lampac/Shared/: AppInit.cs  BaseController.cs  Shared.csproj
Lampac/config/: base.conf
Lampac/docs/: api.html  config.html  index.html  modules.html
lampa-source/src/: app.js
(+316 files in other folders)
